<resources>
    <string name="app_name">CarCost</string>
    <string name="user_name">Jakub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="intro_hello">Witaj w CarCost!</string>
    <string name="intro_user">Użytkownik</string>
    <string name="intro_user_name">Podaj swoje imię:</string>
    <string name="intro_user_distance">Wybierz jednostkę odległości:</string>
    <string name="intro_user_km">Kliometry</string>
    <string name="intro_user_m">Mile</string>
    <string name="intro_user_volume">Wybierz jednostkę pojemności:</string>
    <string name="intro_user_l">Litry</string>
    <string name="intro_user_g">Galony</string>
    <string name="intro_perm">Uprawnienia</string>
    <string name="intro_perm_storage">
        Aplikacja wymaga do poprawnego funkcjonowania importu i eksportu,
        uprawnień związanych ze pamięcią.
    </string>

    <string name="slide_home">Start</string>
    <string name="slide_stats">Statystyki</string>
    <string name="slide_history">Historia</string>
    <string name="slide_im_ex">Import/Export</string>
    <string name="settings">Ustawienia</string>
    <string name="tutorial">Samouczek</string>
    <string name="slide_others">Inne</string>
    <string name="slide_change">Zmień pojazd</string>
    <string name="slide_about_me">O mnie</string>
    <string name="slide_policy">Polityka prywatności</string>

    <string name="settings_custom">Personalizacja</string>
    <string name="settings_tutorial">Samouczek</string>

    <string name="fragment_home_all">Całkowity koszt za kilometr: </string>
    <string name="fragment_home_avg_fuel">Średnie spalanie: </string>
    <string name="fragment_home_last30">Koszt za kilometr (30 dni): </string>
    <string name="fragment_home_fuel_label">Paliwo</string>

    <string name="fragment_stats">Twoje Statystyki</string>
    <string name="fragment_history">Historia</string>
    <string name="fragment_im_ex">Importuj lub Exportuj</string>
    <string name="fragment_settings">Ustawienia i Samouczek</string>
    <string name="fragment_change">Change</string>
    <string name="fragment_about_me">O mnie</string>
    <string name="fragment_policy">Polityka prywatności</string>

    <string name="next">Dalej</string>
    <string name="back">Wstecz</string>
    <string name="end">Zakończ</string>
    <string name="car">Pojazd</string>

    <string name="add_cost_add">Dodaj</string>
    <string name="add_cost_check_box">Tankowanie do pełna</string>
    <string name="add_cost_prize_unit">Cena za jednostkę:</string>
    <string name="add_cost_fuel_unit_amount">Zatankowana ilość:</string>
    <string name="add_cost_date">Data:</string>
    <string name="add_cost_mileage">Przebieg:</string>
    <string name="add_cost_expense">Koszt całkowity:</string>
    <string name="add_cost_tank_missed">Czy pominięto poprzednie tankowanie?</string>
    <string name="add_cost_tank_number">Wybierz numer baku:</string>
    <string name="add_cost_1_tank">Pierwszy</string>
    <string name="add_cost_2_tank">Drugi</string>
    <string name="add_cost_category">Wybierz kategorię:</string>
    <string name="add_cost_add_description">Wprowadź krótki opis kosztu(opcja):</string>
    <string name="add_cost_insurer">Wprowadź nazwę ubezpieczyciela:</string>
    <string name="add_cost_place">Wprowadź nazwę miejsca(opcja):</string>
    <string name="add_cost_insurance">Wybierz typ ubezpieczenia:</string>

    <string name="since_history">Od:</string>
    <string name="to_history">Do:</string>
    <string name="categories_history_button">Kategorie</string>
    <string name="search_history_button">Szukaj</string>
    <string name="cost_edit_button">Zapisz</string>
    <string name="category_select_title">Wybierz kategorie</string>
    <string name="cancel_button">Anuluj</string>
    <string name="ok">OK</string>

    <string name="delete_cost_button">Usuń</string>
    <string name="export_db">Exportuj bazę danych do pliku</string>
    <string name="export_db_button">Exportuj</string>
    <string name="import_db">Importuj bazę danych z pliku</string>
    <string name="import_db_button">Importuj</string>

    <string name="empty_view_error">"Pole jest wymagane."</string>
    <string name="negative_value_error">"Wartość nie może być ujemna."</string>
    <string name="uncorrect_format_error">"Niepoprawny format."</string>

    <string-array name="cost_categories">
        <item>Konserwacja i naprawy</item>
        <item>Przegląd</item>
        <item>Ubezpieczenie</item>
        <item>Inne</item>
    </string-array>

    <string-array name="all_categories">
        <item>Tankowanie</item>
        <item>Konserwacja i naprawy</item>
        <item>Przegląd</item>
        <item>Ubezpieczenie</item>
        <item>Inne</item>
    </string-array>

    <string-array name="insurance">
        <item>OC</item>
        <item>AC</item>
    </string-array>

    <string-array name="fragment_titles">
        <item>Start</item>
        <!--<item>Statystyki</item>-->
        <item>Historia</item>
        <item>Import/Export</item>
        <!--<item>Ustawienia</item>-->
        <!--<item>Zmień pojazd</item>-->
        <!--<item>O mnie</item>-->
        <!--<item>Polityka prywatności</item>-->
        <item>Dodaj tankowanie</item>
        <item>Dodaj koszt</item>
        <item>Edytuj koszt</item>
    </string-array>

</resources>
