<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_48"
            android:title="@string/slide_home" />
        <!--<item
            android:id="@+id/nav_stats"
            android:icon="@drawable/stats_48"
            android:title="@string/slide_stats" />-->
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_48"
            android:title="@string/slide_history" />
        <item
            android:id="@+id/nav_im_ex"
            android:icon="@drawable/im_ex_48"
            android:title="@string/slide_im_ex" />
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_48"
            android:title="@string/settings" />-->
    </group>

    <!--<item android:title="@string/slide_others">
        <menu>
            <item
                android:id="@+id/nav_change"
                android:icon="@drawable/change_48"
                android:title="@string/slide_change" />
            <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/about_me_48"
                android:title="@string/slide_about_me" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/policy_48"
                android:title="@string/slide_policy" />
        </menu>
    </item>-->

</menu>
