<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kuba.carcost.fragment.AddFuelFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/add_cost_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="8"
                android:id="@+id/mileageFAEditText"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6" />

            <TextView
                android:text="@string/add_cost_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="16sp"
                android:layout_below="@+id/mileageFAEditText"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="8dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="8"
                android:id="@+id/dateFAEditText"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/textView6"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6" />

            <TextView
                android:text="@string/add_cost_fuel_unit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/dateFAEditText"
                android:layout_alignLeft="@+id/fuelUnitAmountFAEditText"
                android:layout_alignStart="@+id/fuelUnitAmountFAEditText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="8"
                android:id="@+id/fuelUnitAmountFAEditText"
                android:layout_below="@+id/textView7"
                android:layout_alignLeft="@+id/dateFAEditText"
                android:layout_alignStart="@+id/dateFAEditText"
                android:layout_marginTop="8dp"/>

            <TextView
                android:text="@string/add_cost_prize_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/textView13"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/fuelUnitAmountFAEditText"
                android:layout_alignLeft="@+id/fuelUnitAmountFAEditText"
                android:layout_alignStart="@+id/fuelUnitAmountFAEditText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="8"
                android:layout_marginTop="8dp"
                android:id="@+id/fuelUnitPriceFAEditText"
                android:layout_below="@+id/textView13"
                android:layout_alignLeft="@+id/fuelFullFACheckBox"
                android:layout_alignStart="@+id/fuelFullFACheckBox" />

            <CheckBox
                android:text="@string/add_cost_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:id="@+id/fuelFullFACheckBox"
                android:checked="true"
                android:layout_below="@+id/fuelUnitPriceFAEditText"
                android:layout_alignLeft="@+id/textView13"
                android:layout_alignStart="@+id/textView13" />

            <Button
                android:text="@string/add_cost_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:id="@+id/addFuelButton"
                android:layout_below="@+id/fuelFullFACheckBox"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
