<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kuba.carcost.fragment.HistoryFragment"
    android:isScrollContainer="true">

    <TextView
        android:id="@+id/textView21"
        android:text="@string/since_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignBaseline="@+id/sinceDateHistoryTextView"
        android:layout_alignBottom="@+id/sinceDateHistoryTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/sinceDateHistoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView22"
        android:layout_toEndOf="@+id/textView22"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textView22"
        android:text="@string/to_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/toDateHistoryTextView"
        android:layout_alignBottom="@+id/toDateHistoryTextView"
        android:layout_alignLeft="@+id/textView21"
        android:layout_alignStart="@+id/textView21" />

    <TextView
        android:id="@+id/toDateHistoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/sinceDateHistoryTextView"
        android:layout_alignLeft="@+id/sinceDateHistoryTextView"
        android:layout_alignStart="@+id/sinceDateHistoryTextView"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/categoriesHistoryButton"
        android:text="@string/categories_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_above="@+id/toDateHistoryTextView"
        android:textSize="12sp"
        android:textStyle="normal|bold"
        android:layout_alignTop="@+id/sinceDateHistoryTextView" />

    <Button
        android:id="@+id/searchHistoryButton"
        android:text="@string/search_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/categoriesHistoryButton"
        android:layout_alignEnd="@+id/categoriesHistoryButton"
        android:layout_alignBottom="@+id/toDateHistoryTextView"
        android:textSize="12sp"
        android:layout_alignTop="@+id/toDateHistoryTextView"
        android:textStyle="normal|bold"
        android:layout_alignLeft="@+id/categoriesHistoryButton"
        android:layout_alignStart="@+id/categoriesHistoryButton" />

    <View
        android:id="@+id/view1History"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha=".5"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/toDateHistoryTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="2dp" />

    <ListView
        android:id="@+id/historyListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view1History"
        android:layout_marginTop="2dp" />

</RelativeLayout>
